--- a/01_nota0-10.html
+++ b/01_nota0-10.html
@@ -6,7 +6,11 @@
     */
 
     //Entrada
-
+    let nota = Number(prompt("informe uma nota entre 1 e 10"))
+    while(nota<1||nota>10){
+        alert("valor invalido!")
+        nota = Number(prompt("informe uma nota entre 1 e 10"))
+    }
 
     //Processamento
 
